# Journal-Utilities

./: .env.sample  .gitignore  CLAUDE.md  Makefile  NOTES.md  README.md  TODO.md  pyproject.toml  richerSentenceWords.py
1_youtube_to_audio/: all_links_for_test_uploaded_links.json  main.py  uploaded_links.json
2_audio_to_markdown/: AllSpeakers.csv  Mass submit CloudWhisper transcription requests.ods  SubmitToCloudWhisper.py  SubmitToCloudWhisper_textbook.py  renameImageFiles.py  sentencesToTranscripts.py
2_audio_to_markdown/Archive_2_audio_to_markdown/: 2_sentencesToTranscripts.py
5_markdown_to_final/: markdown_transcript_parser.py  ontology.csv  template.docx
5_markdown_to_final/templates/: default.opendocument
Archive/: StanzaNLP.py  StanzaNLP_parse-only.py  SubmitToCloudWhisper_textbook.py  sentencesToTranscripts.py  sentencesToTranscripts_X.py
Archive/1_youtube_to_audio/: main.py  requirements.txt
Archive/2_audio_to_markdown/: AllSpeakers.csv  RunLocalWhisper.py  SubmitToCloudWhisper_textbook.py  authkey.txt
Archive/docs/: processing_session.md
May_2023_testing/: original.py  requirements.txt
Speech_To_Text/: 1_SubmitToCloudWhisper.py  2_sentencesToTranscripts.py
docs/: processing_session.md
src/: __init__.py  ingest_db_create_wav.py  private_videos.json  transcribe.py
tests/: expected_output.md  input_sample_content.md  sample_output.md  sample_output.srt  test_audit_functions.py  test_output_final_artifacts.py  test_transcript.py
youtube_to_github/: Active Inference Institute Livestreams.csv  main.py  settings.py  uploaded_links.json
(+363 files in other folders)
